# Ayaka-Core

./: .env.example  README.md  environment.yml  install.bat  install.sh  pyproject.toml  requirements.txt  run.py  setup.py  start.py  start_web.py  test_cuda.py
.uv/: .gitignore
ai_companion/: __init__.py
ai_companion/ai/: __init__.py  conversation_manager.py  persona_manager.py
ai_companion/config/: __init__.py  settings.py
ai_companion/memory/: chat_history_manager.py  memory_manager.py
ai_companion/services/: __init__.py  cache_service.py  llm_client.py
ai_companion/utils/: __init__.py  helpers.py  logger.py  validators.py
ai_companion/web/: __init__.py  app.py  socketio_handlers.py
cache/: cache.db
config/: persona.json  settings.json
web/static/: script.js  style.css
web/templates/: chat.html  index.html
