[project]
name = "ai-companion"
version = "1.0.0"
description = "AI Virtual Companion System - Intelligent dialogue system based on large language models"
authors = [
    {name = "AI Companion Team"}
]
readme = "README.md"
requires-python = ">=3.11.12"
dependencies = [
    "flask==3.0.0",
    "flask-socketio==5.3.6",
    "werkzeug==3.0.1",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "itsdangerous==2.1.2",
    "click==8.1.7",
    "blinker==1.7.0",
    "python-socketio==5.9.0",
    "eventlet==0.33.3",
    "requests==2.31.0",
    "urllib3==2.1.0",
    "certifi==2023.11.17",
    "charset-normalizer==3.3.2",
    "idna==3.6",
    "six==1.16.0",
    "pydantic==2.5.0",
    "python-json-logger==2.0.7",
    "python-dotenv==1.0.0",
    "pillow==10.1.0",
    "gunicorn==21.2.0",
    "redis==5.0.1",
    "celery==5.3.4",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
    "types-redis==4.6.0.11",
    "types-requests==2.31.0.10",
]

[tool.uv]
dev-dependencies = [
    "pytest==7.4.3",
    "pytest-flask==1.3.0",
    "black==23.11.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "pre-commit==3.5.0",
    "types-redis==4.6.0.11",
    "types-requests==2.31.0.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]